# jentic-summer-hackathon

tracks/track-02-har-to-openapi/: pyproject.toml  test-workflow.arazzo.yaml
