[project]
name = "track-02-har-to-openapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arazzo-runner>=0.8.22",
    "click>=8.1.0",
    "colorama>=0.4.6",
    "jsonschema>=4.19.0",
    "openapi-spec-validator>=0.7.1",
    "pandas>=2.0.0",
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
    "rich>=13.5.0",
    "urllib3>=2.0.0",
]
